--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
     <application
         android:allowBackup="true"
@@ -15,24 +16,25 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FSpotify"
         tools:targetApi="31">
-
         <activity
             android:name=".activities.PlayerActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activities.QueueActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activities.LibraryActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity
-            android:name=".activities.QueueActivity"
+        
+        <service
+            android:name=".services.MusicPlayerService"
+            android:enabled="true"
             android:exported="false" />
-
-        <activity
-            android:name=".activities.LibraryActivity"
-            android:exported="false" />
-
     </application>
 
 </manifest>
