--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,10 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/iconshrek"
+        android:icon="@mipmap/fspotify"
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/network_security_config"
-        android:roundIcon="@mipmap/iconshrekround"
+        android:roundIcon="@mipmap/fspotify"
         android:supportsRtl="true"
         android:theme="@style/Theme.FSpotify"
         tools:targetApi="31">
