--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,19 +16,20 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FSpotify"
         tools:targetApi="31">
-        <activity
-            android:name=".activities.PlayerActivity"
-            android:exported="false" />
+        <activity android:name=".activities.PlayerActivity"
+        android:exported="true">
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+        </activity>
         <activity
             android:name=".activities.QueueActivity"
             android:exported="false" />
         <activity
             android:name=".activities.LibraryActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            android:exported="false">
+
         </activity>
         
         <service
